name: mathmagic
version:    0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
maintainer: pascal.munerot@gmail.com
synopsis: mathemagic functions
description: An experimental REPL program whose purpose is to explore arithmetic, especially with non conventional methods such as the Vedic and Trachtenberg systems and compare them to classic arithmetic.
             .
category: Math
author: Pascal Munerot
data-dir: ""

local-repo: D:\GitHub\experiments\proglang\haskell\.cabal-sandbox\packages
logs-dir: D:\GitHub\experiments\proglang\haskell\.cabal-sandbox\logs
world-file: D:\GitHub\experiments\proglang\haskell\.cabal-sandbox\world
user-install: False
package-db: D:\GitHub\experiments\proglang\haskell\.cabal-sandbox\x86_64-windows-ghc-7.8.3-packages.conf.d
build-summary: D:\GitHub\experiments\proglang\haskell\.cabal-sandbox\logs\build.log

executable mathmagic
--    build-depends: base >=4.7 && <=4.8, haskeline -any, random -any
    build-depends: base -any, haskeline -any, random -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src


